# hands-off-release

./: .gitignore  Cargo.toml  Shuttle.toml
examples/: example.yml
hor-core/: Cargo.toml
hor-core/src/: lib.rs
hor-core/src/registry/: file.rs  githubapp.rs  mod.rs
hor-registry/: Cargo.toml
hor-registry/src/: file.rs  lib.rs
src/: main.rs
