[package]
name = "hands-off-release"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["hor-core", "hor-registry"]

[workspace.dependencies]
# Mediator
mediator = { git = "ssh://git@github.com/JayJeyaruban/mediator.git" }
mediator-config = { git = "ssh://git@github.com/JayJeyaruban/mediator.git" }
mediator-tracing = { git = "ssh://git@github.com/JayJeyaruban/mediator.git" }

derive_more = "0.99.17"
serde = "1.0.189"
thiserror = "1.0.50"
