[package]
name = "hands-off-release"
version = "0.1.0"
edition = "2021"

[dependencies]
# Child crates
hor-core = { path = "hor-core" }

# Workspace crates  
anyhow = { workspace = true }
mediator-config = { workspace = true }
config = { workspace = true }

# Other crates
shuttle-runtime = "0.33.0"
shuttle-tower = "0.33.0"

[workspace]
members = ["hor-core"]

[workspace.dependencies]
# Mediator
mediator = { git = "https://github.com/JayJeyaruban/mediator.git" }
mediator-config = { git = "https://github.com/JayJeyaruban/mediator.git" }
mediator-tracing = { git = "https://github.com/JayJeyaruban/mediator.git" }

derive_more = "0.99.17"
serde = "1.0.189"
thiserror = "1.0.50"
anyhow = "1.0.75"
config = { version = "0.13.3" }
jsm = "0.1.0"
