[package]
name = "hor-core"
version = "0.1.0"
edition = "2021"

[dependencies]

# Workspace
mediator = { workspace = true }
mediator-tracing = { workspace = true }
mediator-config = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
jsm = { workspace = true }

# Local
octocrab = "0.31.2"
serde_json = "1.0.107"
async-trait = "0.1.74"
tracing = "0.1.40"
tower = "0.4.13"
hyper = "0.14.27"
